<resources>
    <string name="app_name">Covid Smasher</string>
    <string name="username_email">Username/email</string>
    <string name="password">Password</string>
    <string name="title_activity_news">news</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="blog">Blog</string>
    <string name="vaccination">Vaccination</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>