<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="ExtraText">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/graph_dasboard"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/blog"
        android:icon="@drawable/blog"
        android:title="@string/blog" />

    <item
        android:id="@+id/vaccination"
        android:icon="@drawable/vaccination"
        android:title="@string/vaccination" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/profile"
        android:title="@string/profile" />


</menu>